# SUB2LEADS

./: .replit  README.md  fix-missing-columns.js  hawaii-investors-importer.js  import-investors.js  import-pace-investors.js  migrate.js  package-lock.json  package.json  pyproject.toml  replit.md  vercel.json
api/: index.ts
attached_assets/: Pasted--1-Hawaii-State-Judiciary-Hoohiki-Court-Records-URL-https-www-courts-state-hi-us-legal-refe-1752556967743_1752556967743.txt  Pasted--1-StarAdvertiser-Legal-Notices-Scraper-Uses-requests-BeautifulSoup-for-foreclosure-auction-1752557008103_1752557008104.txt  Pasted--1-Understand-the-Two-Risk-Layers-A-City-Development-Plans-You-want-to-find-out-if-a-property-is-1752707320346_1752707320347.txt  Pasted--CLEAN-REAL-DATA-ONLY-IMPLEMENTATION-PLAN-1-Supabase-Schema-Investors-Table-sql-Copy-Edit-ALT-1752704283088_1752704283089.txt  Pasted--CORE-FEATURES-TO-INCLUDE-1-Leads-Dashboard-Main-Hub-UI-Elements-Table-view-with-filters-Sta-1752665395565_1752665395566.txt  Pasted--GOAL-Hawaii-County-Data-Integration-for-Sub2Leads-Bird-Dog-CRM-We-ll-break-this-down-by-Targ-1752665506071_1752665506072.txt  Pasted--GOAL-Scrape-Oahu-Honolulu-Foreclosure-Notices-Source-Honolulu-foreclosure-auctions-are-pub-1752665566871_1752665566872.txt  Pasted--IMPLEMENTATION-PLAN-1-Lead-Submission-Form-Update-your-LeadForm-tsx-or-wherever-you-handle-lead-i-1752675671210_1752675671217.txt  Pasted--Investor-Grade-Property-PDF-Generator-with-Photos-Comps-and-Map-Integration-from-fpdf-import--1752672483345_1752672483346.txt  pace_buyers_list_HI_only_1752734900280.csv  (+21 more)
(+78 files in other folders)
