[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
]
